correction z-index

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -26,8 +26,9 @@
      left: 16.79%;
      width: 66.5%;
      height: 66.5%;
-     z-index: 400;
+     z-index: 1;
      mix-blend-mode: screen;
+
  }
 
 
@@ -293,7 +294,7 @@
      border-radius: 50%;
      border: none;
      transition: 0.6s cubic-bezier(0.19, 1, 0.22, 1);
-     z-index: 1;
+     z-index: 100;
  }
 
  #menu-toggle:checked+label {
@@ -308,7 +309,7 @@
      box-shadow: rgba(0, 0, 0, 0.12) 0px 0px 8px 0px,
          rgba(0, 0, 0, 0.12) 0px 8px 8px 0px;
      transition: 0.6s cubic-bezier(0.19, 1, 0.22, 1);
-     z-index: 1;
+     z-index: 100;
      cursor: pointer;
  }
 
@@ -335,7 +336,7 @@
      height: 250px;
      border-radius: 3px;
      transition: 0.6s cubic-bezier(0.19, 1, 0.22, 1);
-     z-index: 2;
+     z-index: 200;
  }
 
  #menu-toggle:not(:checked)+label+#menu li {
@@ -370,7 +371,7 @@
      flex-direction: row;
      align-items: baseline;
      position: absolute;
-     z-index: 400;
+     z-index: 300;
      top: 1.2%;
      left: 2%;
  }
